# pengbot99

./: .gitignore  README.md  pyproject.toml  setup.py
config/: classic_mp_schedule.csv  grandprix_rotation.csv  miniprix_schedule.csv  misa.csv  mwt_schedule.csv  mysterygp_schedule.csv  ninetynine_schedule.csv  pl_miniprix.csv  private_classic_mp_schedule.csv  private_miniprix_schedule.csv  slot1_schedule.csv  slot2_schedule.csv  slot2_schedule_weekend.csv
py/: __init__.py  apiadapter.py  bot.py  choicerace.py  events.py  formatters.py  miniprix.py  misa.py  schedule.py
py/pengbot99/: apiadapter.py  bot.py  choicerace.py  events.py  explain_cmd.py  formatters.py  miniprix.py  misa.py  schedule.py  secret_league.py  ui.py  utils.py
tests/: test_miniprix.py  test_schedule.py
tests/fixtures/: classic_mp_schedule_miniworldtour.csv  miniprix_mirroring_schedule.csv  miniprix_schedule.csv  slot2_schedule.csv  slot2_schedule_anniversary.csv  slot2_schedule_miniworldtour.csv  slot2_schedule_weekend.csv  slot2_schedule_weekend_anniversary.csv  slot2_schedule_weekend_miniworldtour.csv  slot2_schedule_weekend_miniworldtour_edge.csv  slot2_schedule_weekend_tbptc_edge.csv
